--- a/templates/home.html
+++ b/templates/home.html
@@ -6,7 +6,7 @@
     <div class="container-fluid">
         <a class="navbar-brand" href="#">
             <img src="../static/assets/tennis_ball.jpg" alt="" width="30" height="30" class="d-inline-block align-text-top">
-            Bootstrap
+            Kyrgios
           </a>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
@@ -37,7 +37,7 @@
         </div>
         <div>
             <p class="p-3">
-                Welcome Back,<br> glad to see that you have taken the initiative to play some more tennis. 
+                Welcome Back,<br> glad to see that you have taken the initiative to prioritize drop serves and tweeners. 
             </p>
         </div>
     </div>
@@ -54,7 +54,7 @@
                 <div class="bg-light p-3">
                     <div class="text-center">
                         <p class="text-secondary">No leagues joined</p>
-                        <button class="bttn-float bttn-md bttn-primary">Join Now</button>                    
+                        <button class="bttn-jelly bttn-md bttn-primary ">Join Now</button>                    
                     </div>
                 </div>
             </div>
@@ -71,7 +71,8 @@
                 <div class="bg-light p-3">
                     <div class="text-center">
                         <p class="text-secondary">No courts saved</p>
-                        <button class="bttn-float bttn-md bttn-primary">Search Courts</button>                    
+                        <button class="bttn-jelly bttn-md bttn-primary ">Search Court</button>   
+                                        
                     </div>
                 </div>
             </div>
