--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
             <p class="col-md-8 fs-4">
                 You every want to call you opponent a little bitch? Fuck it, do it<br> 
                 Join the Kyrgios League and help build a new way of playing tennis</p>
-            <a class="btn btn-primary btn-lg mt-2" type="button" target="_blank" href="{{url_for('auth.register')}}">Register Now</a>
+            <button class="bttn-jelly bttn-md bttn-primary" type="button" target="_blank" href="{{url_for('auth.register')}}">Register Now</button>
           </div>
         </div>
     
@@ -25,14 +25,14 @@
             <div class="h-100 p-5 text-bg-dark rounded-3">
               <h2>Learn from the best</h2>
               <p>We have an endless library of Nick Kyrgios videos to help you get started and act the part in our league. Remember, if the ball looks even a bit in, that probably means it's out</p>
-              <button class="btn btn-outline-light" type="button">Learn from Nick</button>
+              <button class="bttn-jelly bttn-md bttn-default">Learn from Nick</button>
             </div>
           </div>
           <div class="col-md-6">
             <div class="h-100 p-5 bg-light border rounded-3">
               <h2>Meet new friends</h2>
               <p>You will most definitely meet like minded individuals. Static stretching at the end of practice? Nahhhh. Hit the bars with your teamates or even bust out a game of warzone.</p>
-              <button class="btn btn-outline-secondary" type="button">What is Warzone?</button>
+              <button class="bttn-jelly bttn-md bttn-primary" type="button">What is Warzone?</button>
             </div>
           </div>
         </div>
