--- a/templates/home.html
+++ b/templates/home.html
@@ -83,15 +83,18 @@
 
   <div>
     <div class="row justify-content-center">
+        {% for news in kyrgios_news %}
         <div class="div col-lg-3 col-md-4">
-
+            <div class="card" style="width: 18rem;">
+                <img class="card-img-top" src="..." alt="Card image cap">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+              </div>
         </div>
-        <div class="div col-lg-3 col-md-4">
-
-        </div>
-        <div class="div col-lg-3 col-md-4">
-
-        </div>
+        {% endfor %}
     </div>
   </div>
 
