--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
           <div class="container-fluid py-5">
             <h1 class="display-5 fw-bold">Join the new style of tennis</h1>
             <p class="col-md-8 fs-4">
-                You every want to call you opponent a little bitch? Fuck it, do it<br> 
+                You ever want to call your opponent a little bitch? Fuck it, do it<br> 
                 Join the Kyrgios League and help build a new way of playing tennis</p>
             <button class="bttn-jelly bttn-md bttn-primary" type="button" target="_blank" href="{{url_for('auth.register')}}">Register Now</button>
           </div>
