--- a/templates/home.html
+++ b/templates/home.html
@@ -83,7 +83,7 @@
       <div class="col-lg-6 col-md-7 p-4">
           <div class="shadow round bg-white" style="margin-top:-60px; margin-bottom:60px; height: 600px;
           overflow-x: hidden;
-          overflow-y: auto;" ">
+          overflow-y: auto;">
               <div class="p-3">
                   <h4>Nick News</h4>
               </div>
