--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
             <p class="col-md-8 fs-4">
                 You ever want to call your opponent a little bitch? Fuck it, do it<br> 
                 Join the Kyrgios League and help build a new way of playing tennis</p>
-            <button class="bttn-jelly bttn-md bttn-primary" type="button" target="_blank" href="{{url_for('auth.register')}}">Register Now</button>
+            <a href="{{url_for('auth.register')}}"><button class="bttn-jelly bttn-md bttn-primary" type="button" target="_blank">Register Now</button></a>
           </div>
         </div>
     
