--- a/templates/login.html
+++ b/templates/login.html
@@ -17,7 +17,7 @@
                       <input type="password" class="form-control" id="exampleInputPassword1" required>
                     </div>
                   
-                    <button type="submit" class="btn btn-primary">Submit</button>
+                    <button type="submit" class="bttn-jelly bttn-md bttn-default">Submit</button>
                   </form>
             </div>
         </div>
