--- a/templates/index.html
+++ b/templates/index.html
@@ -5,9 +5,9 @@
     <main>
       <div class="container py-4">
         <header class="pb-3 mb-4 border-bottom">
-          <a href="/" class="d-flex align-items-center text-dark text-decoration-none">
             <span class="fs-4">Kyrgios Tennis</span>
-          </a>
+            <a class="float-end" href="{{url_for('auth.login')}}"><button class="bttn-bordered bttn-sm bttn-primary">Login</button></a>      
+
         </header>
     
         <div class="p-5 mb-4 bg-light rounded-3 jumbo-home">
