--- a/templates/home.html
+++ b/templates/home.html
@@ -14,7 +14,7 @@
             <a class="nav-link active" aria-current="page" href="#">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Search League</a>
+            <a class="nav-link" href="{{url_for('leagues.leagues_home')}}">Search League</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Find Bar</a>
@@ -34,9 +34,10 @@
   <div style="max-width:2000px;" class="m-auto">
     <div class="home-jumbo border text-light" style="height:25em;">
       <div class="mt-4 ms-4 mb-5">
-          <div class="mt-5 p-3">
-              <h1 class="display-4 fw-bold">Hello {{current_user['first_name']}}</h1>
-          </div>
+          <div class="mt-5 ms-3">
+            <h1 class="display-4 fw-bold">Hello {{current_user['first_name']}}</h1>
+            <h6 class="mt-3">NTRP: {{current_user['ntrp']}}</h6>
+        </div>
           <div>
               <p class="p-3">
                   Welcome Back,<br> glad to see that you have taken the initiative to prioritize drop serves and tweeners. 
