--- a/templates/leagues.html
+++ b/templates/leagues.html
@@ -4,27 +4,27 @@
 
 <!-- Navigation bar -->
 <nav class="navbar navbar-expand-lg bg-light shadow">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="#">
-            <img src="../static/assets/tennis_ball.jpg" alt="" width="30" height="30" class="d-inline-block align-text-top">
-            Kyrgios
-          </a>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="{{url_for('home.home_page')}}">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" href="#">Search League</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Find Bar</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link disabled">Disabled</a>
-          </li>
-        </ul>
-      </div>
+    <div class="container-fluid" style="max-width:2000px;">
+            <a class="navbar-brand" href="#">
+                <img src="../static/assets/tennis_ball.jpg" alt="" width="30" height="30" class="d-inline-block align-text-top">
+                Kyrgios
+              </a>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="{{url_for('home.home_page')}}">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" href="#">Search League</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Find Bar</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link disabled">Disabled</a>
+              </li>
+            </ul>
+          </div>
     </div>
   </nav>
 
