--- a/templates/register.html
+++ b/templates/register.html
@@ -36,17 +36,8 @@
                       </div>
                     <div class="mb-3">
                         <label class="form-label">NTRP</label>
-                        <select name="ntrp" class="form-select" required>
-                            <option value="None" selected>None</option>
-                            <option value="3">3.0</option>
-                            <option value="3.5">3.5</option>
-                            <option value="4">4.0</option>
-                            <option value="4.5">4.5</option>
-                            <option value="5.0">5.0</option>
-                            <option value="5.5">5.5</option>
-                            <option value="6.0">6.0</option>
+                        <input name="ntrp" min="3" max="6" step=".5" type="number" class="form-control" id="zipcode" required>
 
-                          </select>
                     </div>
                     <button type="submit" class="bttn-jelly bttn-md bttn-primary">Submit</button>                 
                    </form>
