--- a/templates/index.html
+++ b/templates/index.html
@@ -11,9 +11,9 @@
         </header>
     
         <div class="p-5 mb-4 bg-light rounded-3 jumbo-home">
-          <div class="container-fluid py-5">
+          <div class="container-fluid py-5 text-white">
             <h1 class="display-5 fw-bold">Join the new style of tennis</h1>
-            <p class="col-md-8 fs-4">
+            <p class="col-md-8 fs-4 fw-bold">
                 You ever want to call your opponent a little bitch? Fuck it, do it<br> 
                 Join the Kyrgios League and help build a new way of playing tennis</p>
             <a href="{{url_for('auth.register')}}"><button class="bttn-jelly bttn-md bttn-primary" type="button" target="_blank">Register Now</button></a>
