--- a/templates/leagues.html
+++ b/templates/leagues.html
@@ -15,7 +15,7 @@
                 <a class="nav-link" aria-current="page" href="{{url_for('home.home_page')}}">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="#">Search League</a>
+                <a class="nav-link active" href="#">Leagues</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Find Bar</a>
@@ -25,8 +25,34 @@
               </li>
             </ul>
           </div>
+          <div class="float-right">
+            <a href="{{url_for('logout')}}"><button class="bttn-bordered bttn-sm bttn-primary">Logout</button></a>      
+          </div>
     </div>
   </nav>
+
+  <!-- main content -->
+  <div style="max-width:2000px;" class="m-auto">
+    <header class="p-3 border-bottom m-4">
+        <h2 class="fw-bold">Create a Leagues | Join a League</h2>
+    </header>
+    <div>
+        <div class="row justify-content-center">
+            <div class="col-lg-7 p-4">
+                <div class="shadow round bg-white">
+                    <div class="p-3">
+                        <h4 class="fw-bold">Browse Leagues</h4>
+                    </div>                    <div class="bg-light p-3">
+                        
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-5 p-4">
+                <img class="league-image rounded shadow" src="../static/assets/wp3534078.jpg" alt="">
+            </div>
+        </div>
+    </div>
+  </div>
 
 
 {% endblock %}
