--- a/templates/login.html
+++ b/templates/login.html
@@ -2,7 +2,7 @@
 
 {% block body %}
 
-<div class="container-fluid bg-light" style="height: 100vh;">
+<div class="container-fluid bg-light auth-bg" style="height: 100vh;">
     <div class="row justify-content-center">
         <div class="col-md-8 col-sm-10 col-lg-4">
             <div class="container rounded shadow p-3 mt-5 bg-white">
